<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal"
        tools:context=".Model.FormLoginCadastro">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="341dp"
            android:layout_height="107dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/logo_transparente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_entrar"
            style="@style/Purple_Button"
            android:layout_marginTop="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:text="@string/entrar_inicial"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadastrar"
            style="@style/White_Button"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_entrar"
            android:text="@string/cadastrar_inicial"
            />

        <TextView
            android:id="@+id/cadastrar_novo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="38dp"
            android:text="@string/text_cadastro"
            android:textColor="@color/purple"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cadastrar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cadastrar_novo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>