<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".Cadastro.FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="341dp"
        android:layout_height="107dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo_transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponentes"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/Login"
        style="@style/Edit_Text"
        android:layout_marginTop="12dp"
        android:hint="Login:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <EditText
        android:id="@+id/Senha"
        style="@style/Edit_Text"
        android:hint="Senha:"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/Login"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        style="@style/Purple_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Senha"
        android:text="@string/entrar"
        />

    <TextView
        android:id="@+id/redefine_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="17dp"
        android:text="@string/esqueci_senha"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_entrar" />

    <TextView
        android:id="@+id/cadastrar_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:text="@string/cadastro_novo"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redefine_senha" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastrar_novo" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>